--- a/package.json
+++ b/package.json
@@ -53,11 +53,11 @@
     "lucide-react": "^0.454.0",
     "next": "16.0.3",
     "next-themes": "latest",
-    "react": "19.2.0",
-    "react-day-picker": "9.8.0",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.60.0",
-    "react-resizable-panels": "^2.1.7",
+    "react": "19.2.1",
+    "react-day-picker": "9.12.0",
+    "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
+    "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
@@ -70,6 +70,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.4",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
