--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "vaul": "^1.1.2",
     "zod": "3.25.76"
   },
+  "engines": {
+    "node": ">=18.18.0"
+  },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
