feat: migrate from mock data to Prisma ORM with PostgreSQL
- Add Prisma schema with User, Ad, and Rating models
- Configure Prisma client and error handling utilities
- Implement database adapters for type conversion
- Add seeding script for initial data
- Update API routes to use Prisma instead of mock data
- Add README documentation
- Update environment variables and gitignore for Prisma
- Switch package manager to Bun (add bun.lockb)
- Remove legacy mock-data and db files

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,16 @@
+# Database Configuration
+# Para desarrollo local y producción en Vercel
+
+# URL de conexión a PostgreSQL con parámetros de connection pooling optimizados para Vercel free tier
+# Formato: postgresql://USER:PASSWORD@HOST:PORT/DATABASE?connection_limit=1&pool_timeout=0
+PRISMA_DATABASE_URL="postgresql://user:password@localhost:5432/p2p_dev?connection_limit=1&pool_timeout=0"
+
+# Vercel Postgres URL (se configurará automáticamente en Vercel)
+POSTGRES_URL=""
+
 # Dynamic Labs Environment ID
 NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID='your-dynamic-environment-id'
 
 # Telegram Bot Token (opcional)
 TELEGRAM_BOT_TOKEN='your-telegram-bot-token'
+
