--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "build": "next build --webpack",
     "dev": "next dev",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma migrate deploy && next build --webpack",
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
     "@dynamic-labs/sdk-react-core": "^4.49.0",
     "@dynamic-labs/solana": "^4.49.0",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^7.1.0",
     "@radix-ui/react-accordion": "1.2.12",
     "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-aspect-ratio": "1.1.8",
@@ -74,9 +82,12 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "baseline-browser-mapping": "^2.9.5",
+    "dotenv": "^17.2.3",
     "ignore-loader": "^0.1.2",
     "postcss": "^8.5.6",
+    "prisma": "^7.1.0",
     "tailwindcss": "^4.1.17",
+    "tsx": "^4.21.0",
     "tw-animate-css": "1.4.0",
     "typescript": "^5.9.3"
   }
