--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@dynamic-labs/sdk-react-core": "^4.49.0",
     "@dynamic-labs/solana": "^4.49.0",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@radix-ui/react-accordion": "1.2.12",
     "@radix-ui/react-alert-dialog": "1.1.15",
@@ -61,6 +62,7 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "next-themes": "latest",
+    "pg": "^8.16.3",
     "react": "19.2.1",
     "react-day-picker": "9.12.0",
     "react-dom": "19.2.1",
@@ -79,6 +81,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^24.10.1",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "baseline-browser-mapping": "^2.9.5",
