--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # Database Configuration
 # Para desarrollo local y producción en Vercel
 
-# URL de conexión a PostgreSQL con parámetros de connection pooling optimizados para Vercel free tier
-# Formato: postgresql://USER:PASSWORD@HOST:PORT/DATABASE?connection_limit=1&pool_timeout=0
-PRISMA_DATABASE_URL="postgresql://user:password@localhost:5432/p2p_dev?connection_limit=1&pool_timeout=0"
-
-# Vercel Postgres URL (se configurará automáticamente en Vercel)
+# Vercel Postgres URL (configurada automáticamente por Vercel)
 POSTGRES_URL=""
+
+# Prisma Database URL (para desarrollo local)
+# postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+PRISMA_DATABASE_URL="postgresql://user:password@localhost:5432/p2p_dev"
 
 # Dynamic Labs Environment ID
 NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID='your-dynamic-environment-id'
