feat: add Docker setup for local development
- Add docker-compose.yml for local environment
- Create setup-local.sh script for initialization
- Update .env.example with new configuration variables
- Update .gitignore for Docker-related files
- Modify use-program hook and constants for local testing
- Update package.json dependencies
- Update TypeScript definitions

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,38 @@
-# Database Configuration
-# Para desarrollo local y producción en Vercel
+# ==============================================
+# DATABASE CONFIGURATION
+# ==============================================
 
-# Vercel Postgres URL (configurada automáticamente por Vercel)
-POSTGRES_URL=""
+# DESARROLLO LOCAL (usar archivo .env)
+# PostgreSQL local en Docker Compose
+PRISMA_DATABASE_URL="postgresql://p2p_user:p2p_password@localhost:5432/p2p_dev"
+POSTGRES_URL="postgresql://p2p_user:p2p_password@localhost:5432/p2p_dev"
 
-# Prisma Database URL (para desarrollo local)
-# postgresql://USER:PASSWORD@HOST:PORT/DATABASE
-PRISMA_DATABASE_URL="postgresql://user:password@localhost:5432/p2p_dev"
+# PRODUCCIÓN (Vercel configura estas automáticamente)
+# Vercel Postgres inyecta POSTGRES_URL en runtime
+# No necesitas configurar nada para producción - Vercel lo hace automáticamente
 
-# Dynamic Labs Environment ID
-NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID='your-dynamic-environment-id'
+# ==============================================
+# SOLANA RPC CONFIGURATION
+# ==============================================
 
-# Telegram Bot Token (opcional)
+# DESARROLLO LOCAL
+NEXT_PUBLIC_SOLANA_RPC_URL="http://127.0.0.1:8899"
+NEXT_PUBLIC_SOLANA_WS_URL="ws://127.0.0.1:8900"
+
+# PRODUCCIÓN (Vercel configura estas en las variables de entorno del dashboard)
+# NEXT_PUBLIC_SOLANA_RPC_URL="https://api.mainnet-beta.solana.com"
+# NEXT_PUBLIC_SOLANA_WS_URL="wss://api.mainnet-beta.solana.com"
+# O usar devnet:
+# NEXT_PUBLIC_SOLANA_RPC_URL="https://api.devnet.solana.com"
+# NEXT_PUBLIC_SOLANA_WS_URL="wss://api.devnet.solana.com"
+
+# ==============================================
+# THIRD-PARTY SERVICES
+# ==============================================
+
+# Dynamic Labs Environment ID (para autenticación de wallets)
+NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID='004b7624-6c0d-4bb2-98ca-1f2a9ac995b0'
+
+# Telegram Bot Token (opcional, para notificaciones)
 TELEGRAM_BOT_TOKEN='your-telegram-bot-token'
 
