--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "private": true,
   "scripts": {
     "build": "next build --webpack",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "lint": "eslint .",
     "start": "next start",
     "postinstall": "prisma generate",
     "vercel-build": "prisma migrate deploy && next build --webpack",
     "db:studio": "prisma studio",
-    "db:seed": "prisma db seed"
+    "db:seed": "prisma db seed",
+    "db:push": "prisma db push",
+    "db:reset": "docker compose down -v && docker compose up -d && sleep 5 && prisma db push && prisma db seed",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
+    "docker:logs": "docker compose logs -f postgres",
+    "docker:reset": "docker compose down -v && docker compose up -d",
+    "setup:local": "./scripts/setup-local.sh"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
