feat: update configuration, documentation and user-related features
- Update environment variables example
- Improve README documentation
- Modify users API route
- Update how-it-works and profile pages
- Update dependencies and utilities

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,8 @@ NEXT_PUBLIC_SOLANA_WS_URL="ws://127.0.0.1:8900"
 # Dynamic Labs Environment ID (para autenticación de wallets)
 NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID='004b7624-6c0d-4bb2-98ca-1f2a9ac995b0'
 
-# Telegram Bot Token (opcional, para notificaciones)
+# Telegram
+TELEGRAM_API_ID=''
+TELEGRAM_API_HASH=''
 TELEGRAM_BOT_TOKEN='your-telegram-bot-token'
 
